examples/test/testpolicy13994.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13994
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key26: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value34
          key11: value22
      podSelector:
        matchLabels:
          key9: value23
          key2: value37
